apps/searxng/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng-svc-cip
  namespace: searxng
spec:
  selector:
    app: searxng
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  type: NodePort
