apps/searxng/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: infra-redirect-https@kubernetescrd
  name: searxng-ingress
  namespace: searxng
spec:
  rules:
    - host: ENC[AES256_GCM,data:lJSuE+K7HPxcBoaXAwCT+GdGPy1ZnXACXEp+,iv:sk9if53nFWVYGxBuQ+loyfAMiQ/KFVK2NQVc91I7sog=,tag:ZGCdS1v+lDMUkzHSPzPYwA==,type:str]
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: searxng-svc-cip
                port:
                  number: 8080
  tls:
    - hosts:
        - ENC[AES256_GCM,data:xMz2R9T3Dix/RL0v9lNo1BnbL+Nq9JoiIIKG,iv:rrZ+wJxp14ZW8nlu/CWRabI0uvN+tE9ihcdgIKKuy1E=,tag:7jIYFF9uhtVIwdQ1EP+cBA==,type:str]
      secretName: searxng-cert
sops:
  lastmodified: "2026-06-02T15:10:07Z"
  mac: ENC[AES256_GCM,data:FyqmKHhjN05utsQx2MxKSIbe00RuZQidymqNPYau9RwVmBozWZadn7kpXX57SHsqS8ULk4TvzNcbIHC1qgjUrpAbKanKfVPI6LLwcNA7YdtBcKnhbf+fqyRMM8hXsOcUw1EfmDFnRyxaFRLb/5gsc/P4DVv9BUQbmIeyb15Rax0=,iv:suzUpINb4tCSMpSRE6G7OvqbLJbBUPSYVdgdiQs6FiM=,tag:mNqnCFlywE95rw/husU00w==,type:str]
  pgp:
    - created_at: "2026-06-02T15:10:07Z"
      enc: |-
        -----BEGIN PGP MESSAGE-----

        hQIMA1R72LzcpgpmAQ//YPrso0ryNeNw1ceOe31U5SaAMJQ2x7LaZFtDlNm/5lyu
[...]
        =3zVZ
        -----END PGP MESSAGE-----
      fp: 08083A92DBB719D2E10998259B44720A645D6802
  encrypted_regex: ^(data|stringData|email|apiToken|host|hosts)$
  version: 3.12.2
